# waterfall-review-app

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202604270001_create_phase1_tables.py  202604280001_create_phase2_review_tables.py  202604280002_add_review_created_at.py  202604280003_add_review_pdf_fields.py
backend/app/: main.py
backend/app/api/: artifacts.py  aspects.py  auth.py  findings.py  projects.py  reviews.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/llm/: __init__.py  anthropic_client.py  base.py  factory.py  stub_client.py
backend/app/models/: __init__.py  artifact.py  project.py  review.py  user.py
backend/app/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py  registry.py  source_parser.py  xlsx_parser.py
backend/app/schemas/: artifact.py  aspect.py  auth.py  finding.py  project.py  review.py
backend/app/services/: __init__.py  artifact_service.py  aspect_parser.py  auth_service.py  base_review_engine.py  cross_review_engine.py  job_runner.py  pdf_annotator.py  pdf_converter.py  pdf_generation.py  project_service.py  review_engine.py
backend/tests/: conftest.py  test_artifacts.py  test_aspect_parser.py  test_aspects.py  test_auth.py  test_cross_review.py  test_findings.py  test_llm.py  test_parsers.py  test_pdf_annotator.py  test_pdf_api.py  test_projects.py  test_reviews.py
docs/: architecture.md  demo.md  portfolio.md  setup.md
frontend/: .gitignore  (+5 more)
(+50 files in other folders)
