[project]
name = "ai-team-backend"
version = "0.1.0"
description = "Phase 1 FastAPI backend for AI team review support"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "anthropic>=0.45.0",
    "bcrypt>=4.1.0",
    "email-validator>=2.1.0",
    "fastapi>=0.110.0",
    "openpyxl>=3.1.0",
    "pdfminer.six>=20231228",
    "PyMuPDF>=1.23",
    "pywin32>=306; sys_platform == 'win32'",
    "python-jose[cryptography]>=3.3.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "tenacity>=8.2.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
